# netok

./: -files --others --exclude-standard  .cursorrules  .gitattributes  .gitignore  AI_ASSISTANTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPILOT.md  Cargo.toml  DNS_PROVIDERS.md  GEMINI.md  LICENSE.Apache-2.0  LICENSE.Proprietary  MACOS_PORT_ANALYSIS.md  PRIVACY.md  PROJECT_CONTEXT.md  PROJECT_MAP.md  README.de.md  README.es.md  README.fa.md  README.fr.md  README.it.md  README.ja.md  README.ko.md  README.md  README.pl.md  README.pt.md  README.ru.md  README.tr.md  README.uk.md  README.zh.md  README_DEV.md  SECURITY.md  SETUP-PRECOMMIT.md  THIRD_PARTY_LICENSES.md  etsy-hover-effects-fixed.html  landing.html  package-lock.json  package.json  (+3 more)
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: docs-lint.yml  release.yml  tauri-windows.yml  test.yml
.husky/: pre-commit
core/: Cargo.toml
core/src/: lib.rs
core/src/netinfo/: mod.rs
deprecated/: AI_ASSISTANTS.md  COPILOT.md
desktop/: Cargo.toml
desktop/src/: i18n.rs  main.rs
docs/: ACTION_PLAN.md  BACKEND-INTERNALS.md  CODE_ANALYSIS.md  CODING_RULES.md  IMPLEMENTATION-PLAN.md  MOBILE-PLAN.md  PROGRESS.md  README.md  RECOMMENDATIONS.md  REFACTORING-PLAN-SOLID.md  REVISED_PRIORITIES.md  SECURITY_AUDIT.md  SPEED-TEST-INTERNALS.md  SoT-ARCH.md  SoT.md  TASK_TEMPLATE.md  TESTING.md  TESTING_PLAN.md  UI-SPEC.md  user-stories.md
docs/deprecated/: CODING_RULES.md  SoT_legacy.md  TASK_TEMPLATE.md
expo-app/: App.tsx  app.json  package-lock.json  package.json
expo-app/src/api/: network.ts  types.ts
expo-app/src/components/: MenuCard.tsx
expo-app/src/constants/: languages.ts
expo-app/src/hooks/: useTheme.ts
expo-app/src/i18n/: de.json  en.json  es.json  fa.json  fr.json  index.ts  it.json  ja.json  ko.json  pl.json  pt.json  ru.json  tr.json  uk.json  zh.json
expo-app/src/navigation/: RootNavigator.tsx
expo-app/src/screens/: AboutScreen.tsx  DeviceScanScreen.tsx  DiagnosticsScreen.tsx  DnsProvidersScreen.tsx  LanguageSettingsScreen.tsx  NodeDetailScreen.tsx  SettingsScreen.tsx  SpeedTestScreen.tsx  StatusScreen.tsx  ThemeSettingsScreen.tsx  ToolsScreen.tsx  WiFiSecurityScreen.tsx
expo-app/src/stores/: diagnosticsStore.ts  speedTestStore.ts  themeStore.ts
expo-app/src/theme/: colors.ts
expo-app/src/utils/: deriveScenario.ts  ndt7Client.ts  speedTestClient.ts
i18n/: README.md  en.json  ru.json
netok_bridge/: Cargo.toml
netok_bridge/src/: lib.rs  types.rs
netok_bridge/tests/: integration_tests.rs
netok_core/: Cargo.toml
netok_core/benches/: diagnostics_benchmark.rs
netok_core/examples/: internet_demo.rs
netok_core/src/: brand_mapping.rs  diagnostics.rs  domain.rs  lib.rs  model.rs  oui_database.rs
netok_core/src/collect/: adapter_friendly.rs  computer.rs  connectivity.rs  internet.rs  mod.rs  netutil.rs  platform_adapter.rs  router.rs  win_wlan.rs
netok_core/src/collect/active_interface/: linux.rs  macos.rs  mod.rs  windows.rs
netok_core/src/infrastructure/: adapter.rs  arp.rs  connection.rs  dns.rs  gateway.rs  mdns.rs  mod.rs  security.rs  wifi.rs
netok_core/src/infrastructure/vpn/: config.rs  mod.rs  uri_parser.rs
netok_desktop/: README.md  package-lock.json  package.json  tailwind.config.js
netok_desktop/src/: App.tsx  i18n-config.ts  i18n.ts  index.css  main.tsx
netok_desktop/src-tauri/: Cargo.toml  tauri.conf.json
netok_desktop/src-tauri/capabilities/: default.json
netok_desktop/src-tauri/icons/: icon.icns
netok_desktop/src-tauri/src/: commands.rs  lib.rs  main.rs
netok_desktop/src-tauri/tests/: integration_tests.rs
netok_desktop/src-tauri/windows/: hooks.nsh
netok_desktop/src/components/: MainPage.tsx  Settings.tsx
netok_desktop/src/hooks/: useLanguage.ts
netok_desktop/src/i18n/: en.json
scripts/: generate_oui_database.py  generate_project_map.mjs  process_manuf.py
src/: i18n.ts
ui/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts
ui-new/: README.md  index.html  package-lock.json  package.json  vite.config.ts
ui-new/src/: App.tsx  index.css
ui-new/src/components/: DetailedPathCard.tsx  MainStatusCard.tsx  StatusHeader.tsx
ui-new/src/imports/: Card-31-242.tsx  Card-33-466.tsx  Card-33-569.tsx  Card-37-829.tsx  Card-42-1026.tsx  Card-42-1119.tsx  Card-9-130.tsx  Card-9-292.tsx  Card.tsx  Check.tsx  svg-7mtmmw9lcd.ts  svg-gjkejt3b1w.ts  svg-gt5503apnm.ts  svg-havri7zc8r.ts  svg-qf6f52nkak.ts  svg-urvarrlt82.ts
ui/src/: App.tsx  i18n.ts  index.css
ui/src/api/: tauri.ts
ui/src/components/: BottomNav.tsx  DNSTab.tsx  DiagnosticMessage.tsx  DnsVariantCard.tsx  HeaderStatus.tsx  LanguageToggle.tsx  MainPage.i18n.test.tsx  MainPage.tsx  MenuCard.tsx  MockScenarioSelector.tsx  NodeCard.tsx  PingBadge.tsx  ScanProgressRing.tsx  SecurityRouter.tsx  SettingsPage.tsx  SettingsRouter.tsx  Spinner.tsx  ThemeProvider.tsx  WindowControls.tsx
ui/src/constants/: dnsVariantStyles.ts
ui/src/data/: dns-providers.json
ui/src/hooks/: useDemoHotkeys.ts  useDiagnostics.ts  useLivePing.ts  useNavigation.ts  useTheme.ts  useUpdateChecker.ts  useVpnState.ts
ui/src/i18n/: de.json  en.json  es.json  fa.json  fr.json  it.json  ja.json  ko.json  pl.json  pt.json  ru.json  tr.json  uk.json  zh.json
ui/src/mocks/: snapshot.json
ui/src/screens/: AboutScreen.tsx  AdGuardDetailScreen.tsx  AddVpnScreen.tsx  AutostartSettingsScreen.tsx  CleanBrowsingDetailScreen.tsx  CloseBehaviorSettingsScreen.tsx  CloudflareDetailScreen.tsx  CustomIpScreen.tsx  DebugScenariosScreen.tsx  DeviceScanScreen.tsx  DiagnosticsScreen.tsx  Dns4EuDetailScreen.tsx  DnsProvidersScreen.tsx  GoogleDetailScreen.tsx  LanguageSettingsScreen.tsx  NodeDetailScreen.tsx  OpenDnsDetailScreen.tsx  ProtectionHubScreen.tsx  Quad9DetailScreen.tsx  SecurityScreen.tsx  SettingsScreen.tsx  SpeedTestScreen.tsx  StatusScreen.tsx  ThemeSettingsScreen.tsx  ToolsScreen.tsx  VpnTunnelScreen.tsx  (+1 more)
ui_legacy/: Cargo.toml  README.md
ui_legacy/src/: main.rs
(+69 files in other folders)
