[workspace]
members = ["netok_core", "netok_bridge", "netok_desktop/src-tauri"]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
time = { version = "0.3", features = ["formatting"] }

[profile.release]
strip = true
lto = true
codegen-units = 1