[package]
name = "netok-core"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[lib]
name = "netok_core"
path = "src/lib.rs"

[dependencies]
get_if_addrs = "0.5"
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_Networking_WinSock",
  "Win32_NetworkManagement_IpHelper",
  "Win32_NetworkManagement_Ndis"
] }
