[package]
name = "netok-desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
netok-core = { path = "../core" }
iced = { version = "0.12", features = ["tokio", "svg", "canvas"] }
once_cell = "1.19"
arboard = "3.4"

# For saving window state
confy = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
embed-resource = "2.2"

[package.metadata.bundle]
name = "Netok"
identifier = "com.netok.app"
icon = ["assets/icon.ico"]
version = "0.1.0"