[package]
name = "netok_bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
netok_core = { path = "../netok_core" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = "1.0"
tokio = { version = "1", features = ["rt"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }
