[package]
name = "netok_core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
time = { workspace = true }
thiserror = { workspace = true }
get_if_addrs = "0.5"
hostname = "0.3"
default-net = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
  "Win32_NetworkManagement_IpHelper",
  "Win32_NetworkManagement_Ndis",
  "Win32_Networking_WinSock",
  "Win32_Foundation"
] }
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls"] }
uuid = "1.0"
winapi = { version = "0.3", features = ["wlanapi", "guiddef", "winerror", "handleapi", "minwindef", "winnt"] }
