[package]
name = "netok_core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
time = { workspace = true }
thiserror = { workspace = true }
get_if_addrs = "0.5"
hostname = "0.3"
reqwest = { version = "0.12", features = ["json", "blocking"] }
trust-dns-resolver = "0.23"
csv = "1.3"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_NetworkManagement_WiFi", "Win32_Foundation"] }
