[package]
name = "netok_desktop"
version = "0.3.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "netok_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["tray-icon"] }
tauri-plugin-opener = "2.0"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
netok_bridge = { path = "../../netok_bridge" }
netok_core = { path = "../../netok_core" }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }

