[package]
name = "netok_desktop"
version = "0.3.6"
description = "Network diagnostics that speak human language"
authors = ["Anton Korenyako"]
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "netok_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["tray-icon"] }
tauri-plugin-opener = "2.0"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
netok_bridge = { path = "../../netok_bridge" }
netok_core = { path = "../../netok_core" }
tokio = { version = "1", features = ["rt", "time"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_UI_Shell",
    "Win32_System_Threading",
    "Win32_System_Registry",
    "Win32_Foundation",
] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }

